# automation-new-instruments

./: README.md
funds_controller/: CMakeLists.txt  block_trading.cpp  clickhouse_client.cpp  hedge_manager.cpp  loans_manager.cpp  main.cpp  main_commands.cpp  transaction_manager.cpp
funds_controller/include/prod/funds_controller/: block_trading.h  clickhouse_client.h  hedge_manager.h  icommand.h  loans_manager.h  main_commands.h  transaction_manager.h
scripts/: config.py  exchange_info.py  instrument.py  listings.py
